--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12605,7 +12605,11 @@
   "query-editor-next": {
     "detail-placeholder": "Query/Transform detail view goes here",
     "sidebar": {
-      "placeholder": "Sidebar content placeholder",
+      "card-click": "Select query {{refId}}",
+      "expression": "Expression",
+      "queries-expressions": "Queries & Expressions",
+      "query": "Query",
+      "query-stack": "Query Stack",
       "toggle-size": "Toggle sidebar size"
     }
   },
