--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -11884,6 +11884,7 @@
       "search-placeholder": "Search connections",
       "status-connected": "Connected",
       "status-disconnected": "Disconnected",
+      "status-pending": "Pending",
       "status-unknown": "Unknown",
       "view": "View"
     },
