--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -4283,6 +4283,17 @@
     "search": "Search",
     "view": "View"
   },
+  "compatibility-modal": {
+    "checking": "Checking compatibility...",
+    "datasource-not-found": "Datasource not found with UID: {{uid}}",
+    "error-description": "Failed to check dashboard compatibility. Please try again.",
+    "error-title": "Error checking compatibility",
+    "parse-errors-note": "Note: Some queries failed to parse. Check browser console for details.",
+    "retry": "Retry",
+    "score-title": "Compatibility Score: {{value}}%",
+    "title": "Dashboard Compatibility Check for {{dashboardName}}",
+    "v2-not-supported": "Dashboard v2 schema is not yet supported. Compatibility checking is currently only available for v1 dashboards. Support for v2 dashboards is coming soon."
+  },
   "configuration-tracker": {
     "config-card": {
       "complete": "complete"
@@ -5829,6 +5840,8 @@
     "browse-grafana-com": "Browse Grafana.com",
     "browse-plugins": "Browse plugins",
     "card": {
+      "check-compatibility-button": "Check compatibility",
+      "check-compatibility-tooltip": "Check dashboard compatibility with your datasource",
       "datasource-provided-badge": "Data source provided",
       "details-tooltip": "Details",
       "no-preview": "No preview available",
@@ -5852,6 +5865,9 @@
     "community-mapping-select-datasource": "Select a datasource",
     "community-search-placeholder": "Search community dashboards...",
     "community-search-placeholder-with-datasource": "Search {{datasourceType}} community dashboards...",
+    "compatibility-auto-map-failed": "Unable to automatically map all datasource inputs for this dashboard. Compatibility check requires all datasource variables to be resolved.",
+    "compatibility-check-error-description": "Failed to load dashboard for compatibility check. Please try again.",
+    "compatibility-check-error-title": "Error loading dashboard",
     "dashboard-card": {
       "details": {
         "datasource": "Datasource",
