--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -9136,6 +9136,12 @@
       "tooltip-collapse-all": "Collapse all rows",
       "tooltip-expand-all": "Expand all rows"
     },
+    "matchers": {
+      "labels": {
+        "base-field-name": "{{name}} (base field name)",
+        "not-found": "{{name}} (not found)"
+      }
+    },
     "matchers-ui": {
       "description-field-name-by-regex-matcher": "Set properties for fields with names matching a regex",
       "description-fields-by-query": "Set properties for fields from a specific query",
