--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -4885,6 +4885,7 @@
     },
     "edit-pane": {
       "annotation": {
+        "change-data-source": "Change annotation data source",
         "choose-panels": "Choose panels",
         "color": "Color",
         "color-description": "Color to use for the annotation event markers",
