--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -11708,6 +11708,7 @@
       "text-installed": "Installed"
     },
     "version-list": {
+      "deprecated": "Deprecated",
       "grafana-dependency": "Grafana dependency",
       "installed-version": "{{versionNumber}} (installed version)",
       "latest-compatible-version": "{{versionNumber}} (latest compatible version)",
