--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12674,12 +12674,14 @@
   },
   "query-editor-next": {
     "sidebar": {
-      "card-click": "Select query {{refId}}",
+      "card-click": "Select card {{id}}",
       "expression": "Expression",
       "queries-expressions": "Queries & Expressions",
       "query": "Query",
       "query-stack": "Query Stack",
-      "toggle-size": "Toggle sidebar size"
+      "toggle-size": "Toggle sidebar size",
+      "transformation": "Transformation",
+      "transformations": "Transformations"
     }
   },
   "query-library": {
