--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -666,14 +666,15 @@
       "aria-label-name": "Name",
       "aria-label-repeat-interval": "Repeat interval",
       "create-a-contact-point": "Create a contact point",
-      "description-unique-route": "A unique name for the routing tree",
+      "description-unique-routing": "A unique name for the routing tree",
       "label-default-contact-point": "Default contact point",
+      "label-name": "Name",
       "label-timing-options": "Timing options",
       "message": {
         "required": "Required."
       },
-      "name": "Name",
-      "or": "or"
+      "or": "or",
+      "validate-name": "Name is required"
     },
     "am-routes-expanded-form": {
       "add-matcher": "Add matcher",
@@ -2140,6 +2141,10 @@
       "new-policy": "Add new policy",
       "no-matchers": "No matchers",
       "reload-policies": "Reload policies",
+      "root-policy": {
+        "description": "All alert instances associated with this Route will be handled by this default policy if no other matching policies are found.",
+        "title": "Default policy for '{{routeName}}'"
+      },
       "save-policy": "Save policy",
       "update": {
         "please-wait": "Please wait while we update your notification policies.",
@@ -2156,6 +2161,52 @@
         "suffix": "Please refresh the page and try again.",
         "title": "Failed to add or update notification policy"
       }
+    },
+    "policies-list": {
+      "create": {
+        "aria-label": "add policy",
+        "text": "Create policy"
+      },
+      "delete-reasons": {
+        "no-permissions": "You do not have the required permission to delete this routing tree"
+      },
+      "delete-text": "Routing tree cannot be deleted for the following reasons:",
+      "empty-state": {
+        "message": "No policies found"
+      },
+      "fetch": {
+        "error": "Failed to fetch policies"
+      },
+      "policy-header": {
+        "delete": {
+          "aria-label": "delete",
+          "delete-label": "Delete",
+          "reset-label": "Reset"
+        },
+        "edit": {
+          "text": "Edit"
+        },
+        "export": {
+          "aria-label": "export",
+          "label": "Export"
+        },
+        "more-actions": {
+          "aria-label": "More actions for routing tree \"{{name}}\""
+        },
+        "view": {
+          "provisioned-tooltip": "Provisioned routing trees cannot be edited in the UI",
+          "text": "View"
+        }
+      },
+      "reset-reasons": {
+        "no-permissions": "You do not have the required permission to reset this contact point"
+      },
+      "reset-text": "Routing tree cannot be reset for the following reasons:",
+      "text-loading": "Loading...."
+    },
+    "policies-tree-wrapper": {
+      "sorry-routing-exist": "Sorry, this routing tree does not seem to exist.",
+      "title-routing-tree-not-found": "Routing tree not found"
     },
     "policy": {
       "label-new-child-policy": "New child policy",
@@ -2339,6 +2390,13 @@
       "label-override-grouping": "Override grouping",
       "label-override-timings": "Override timings",
       "repeat-interval": "Repeat interval: <strong>{{repeatIntervalValue}}</strong>"
+    },
+    "routing-tree-filter": {
+      "aria-label-clear": "clear",
+      "aria-label-search-routing-trees": "search routing trees",
+      "clear": "Clear",
+      "label-search-by-name-or-receiver": "Search by name or receiver",
+      "placeholder-search": "Search"
     },
     "rule-actions-buttons": {
       "title-edit": "Edit",
@@ -3105,6 +3163,12 @@
       "label-edit": "Edit",
       "label-export": "Export"
     },
+    "use-create-routing-tree-modal": {
+      "modal-element": {
+        "add-routing-tree": "Add routing tree",
+        "title-create-routing-tree": "Create routing tree"
+      }
+    },
     "use-delete-contact-point-modal": {
       "delete-confirm": "Yes, delete contact point",
       "deleting": "Deleting...",
@@ -3122,6 +3186,15 @@
     "use-delete-policy-modal": {
       "modal-element": {
         "title-delete-notification-policy": "Delete notification policy"
+      }
+    },
+    "use-delete-routing-tree-modal": {
+      "modal-element": {
+        "delete-routing": "Are you sure you want to delete this routing tree?",
+        "delete-yes": "Yes, delete routing tree",
+        "deleting": "Deleting...",
+        "deleting-routing-permanently-remove": "Deleting this routing tree will permanently remove it.",
+        "title-delete-routing-tree": "Delete routing tree"
       }
     },
     "use-edit-configuration-drawer": {
