Provisioning: Display connections on repository and repositories on connection page
Add connection display in repository health card with link to connection edit page and status badge. Add connection button to repository actions. Show related repositories on connection edit page including both Grafana repositories using the connection and available external repositories from the provider.

Fixes #724

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -11898,6 +11898,7 @@
       "alert-connection-deleted": "Connection deleted",
       "alert-connection-saved": "Connection saved",
       "alert-connection-updated": "Connection updated",
+      "available-repositories": "Other allowed repositories",
       "back-to-connections": "Back to connections",
       "button-save": "Save",
       "button-saving": "Saving...",
@@ -11910,6 +11911,7 @@
       "error-delete-connection": "Failed to delete connection",
       "error-required": "This field is required",
       "error-save-connection": "Failed to save connection",
+      "grafana-repositories": "Repositories using this connection",
       "label-app-id": "GitHub App ID",
       "label-description": "Description",
       "label-installation-id": "GitHub Installation ID",
@@ -12219,6 +12221,7 @@
       "jobs": "Jobs"
     },
     "repository-actions": {
+      "connection": "Connection",
       "settings": "Settings",
       "source-code": "Source code"
     },
@@ -12241,6 +12244,8 @@
     },
     "repository-overview": {
       "checked": "Checked:",
+      "connection": "Connection:",
+      "connection-status": "Connection Status:",
       "finished": "Last successful pull:",
       "health": "Health",
       "healthy": "Healthy",
