fix time series tooltip quick edit label

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -13874,7 +13874,7 @@
         "legendPlacement": "Legend placement",
         "panelTitle": "Time series: {{title}}",
         "title": "Quick edit",
-        "tooltip": "Quick edit"
+        "tooltip": "Tooltip"
       },
       "tooltip": {
         "multi": "All",
