actually fix label issue for timeseries quick edit / yarn18n update

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -13870,6 +13870,7 @@
         "table": "Table"
       },
       "quickEdit": {
+        "button": "Quick edit",
         "legend": "Legend",
         "legendPlacement": "Legend placement",
         "panelTitle": "Time series: {{title}}",
