--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -11900,6 +11900,7 @@
       "back-to-connections": "Back to connections",
       "button-save": "Save",
       "button-saving": "Saving...",
+      "create-new-connection-button": "Create connection",
       "description-app-id": "The ID of your GitHub App",
       "description-description": "Optional description for this connection",
       "description-installation-id": "The installation ID of your GitHub App",
@@ -12408,12 +12409,15 @@
       "button-start": "Begin synchronization",
       "check-status-button": "Check repository status",
       "check-status-message": "Repository connecting, synchronize will be ready soon.",
+      "connect-step": "Connect",
+      "connection-not-ready": "The selected GitHub App connection is not ready. List will be refreshed once the connection is ready.",
       "discard-modal": {
         "body": "This will delete the repository configuration and you will lose all progress. Are you sure you want to discard your changes?",
         "confirm": "Yes, discard",
         "dismiss": "Keep working",
         "title": "Discard repository setup?"
       },
+      "github-app-connection-status": "Connection status:",
       "github-app-creation-default-error": "Failed to create connection",
       "github-app-creation-failed": "Failed to create GitHub App connection",
       "github-app-error-loading": "Failed to load connections",
@@ -12425,21 +12429,19 @@
       "github-app-mode-new": "Connect to a new app",
       "github-app-no-connections": "No GitHub connections found",
       "github-app-no-connections-message": "You don't have any existing GitHub app connections. Please select \"Connect to a new app\" to create one.",
-      "step-auth-type": "Choose connection type",
+      "github-app-select-connection": "Select a GitHub App connection",
+      "github-app-sync-connection": "Sync Connection",
       "step-bootstrap": "Choose what to synchronize",
       "step-configure-repo": "Configure repository",
       "step-connect": "Connect",
       "step-finish": "Choose additional settings",
-      "step-github-app": "Connect",
       "step-synchronize": "Synchronize with external storage",
       "sync-description": "Sync resources with external storage. After this one-time step, all future updates will be automatically saved to the repository and provisioned back into the instance.",
       "sync-option-migrate-resources": "Migrate existing resources",
-      "title-auth-type": "Choose connection type",
       "title-bootstrap": "Choose what to synchronize",
       "title-configure-repo": "Configure repository",
       "title-connect": "Connect to external storage",
       "title-finish": "Choose additional settings",
-      "title-github-app": "Connect to GitHub",
       "title-synchronize": "Synchronize with external storage"
     },
     "wizard-content": {
