--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -12405,11 +12405,12 @@
       "alert-point-permissions": "Fine-grained permissions are not supported. Default permissions apply: Admin, Editor, and Viewer roles are preserved with their standard access levels.",
       "alert-point-unsupported": "Alerts and library panels are not supported in provisioned folders.",
       "alert-title": "Important: Review Git Sync limitations before proceeding",
+      "auth-type-description": "Both methods provide secure access to your GitHub repositories. Choose the one that best fits your workflow and security requirements.",
       "auth-type-github-app-description": "Use a GitHub App for enhanced security and team collaboration. Recommended for production environments.",
       "auth-type-github-app-label": "Connect with GitHub App",
+      "auth-type-label": "Authentication method",
       "auth-type-pat-description": "Use a personal access token to authenticate with GitHub. Suitable for individual use and testing.",
       "auth-type-pat-label": "Connect with Personal Access Token",
-      "auth-type-subtitle": "Both methods provide secure access to your GitHub repositories. Choose the one that best fits your workflow and security requirements.",
       "button-cancel": "Cancel",
       "button-cancelling": "Cancelling...",
       "button-next": "Finish",
