Apply UX feedback around wording

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -5851,13 +5851,15 @@
     "compatibility-auto-map-failed": "Unable to automatically map all datasource inputs for this dashboard. Compatibility check requires all datasource variables to be resolved.",
     "compatibility-badge": {
       "check": "Check compatibility",
-      "check-failed": "Check failed · Click to retry",
-      "check-tooltip": "Check if the metrics used by this dashboard exist in your datasource",
+      "check-failed": "Check failed",
+      "check-tooltip": "Checks how many dashboard metrics match your data source.",
       "checking": "Checking",
+      "error-hint": "There is an error with the compatibility check, your data source and variables may need to be reviewed.",
       "error-text": "Error",
-      "score-only-tooltip": "{{score}}% metric availability",
-      "score-text": "{{score}}%",
-      "score-tooltip": "{{score}}% metric availability · {{found}}/{{total}} metrics exist in your datasource"
+      "score-text": "{{score}}% compatible",
+      "tooltip-green": "{{score}}% ({{found}}/{{total}}) of metrics match.",
+      "tooltip-orange": "{{score}}% ({{found}}/{{total}}) of metrics match. This dashboard may contain panels that require heavy customization.",
+      "tooltip-red": "{{score}}% ({{found}}/{{total}}) of metrics match. This dashboard will require heavy query customization."
     },
     "dashboard-card": {
       "details": {
